null Exception 해결
api의 담긴 내용의 null 해결
해결한 메서드
1. getPicksByCompanyUsers : companyYear
2. getPicksByCompanyUsers : userType
3. getPicksByPersonalUsers : email, userName, userIntro